﻿IMPROVEMENTS / FIXES
- UI:
	- Fix layout of vessel switcher window buttons and version label.
	- Add debug button when DEBUG_OTHER is enabled for dumping part info.
	- Add a 'Start competition automatically' button to the Vessel Spawner window for use with 'single spawn'.
	- Updated German localisation from EzBro.
- Competition:
	- Tweaks to sequenced competition start-up to allow a single plane to perform the sequence despite not having enough teams for a competition.
	- Add an option to save the image from plot_summary.py with a transparent background.
- AI / WM:
	- Fix max collision avoidance strength in AI GUI.
	- Fix NRE when adjusting autotuning fields in the SPH.
	- AI will no longer dive into missiles approaching from directly below.
	- Reset the auto-tune PID values to the best ones when lowering the learning rate.
	- Add a keybind for arming/disarming the WM.
- Weapons:
	- Fix bug in nuke impulse calculation and some NREs.
- RWP:
	- Reset the killer GM between competitions and don't enable the killer GM for S5R3 (the altitude limit is still active).

v1.5.7.0
IMPROVEMENTS / FIXES
- General:
	- Add option in BDA settings menu to set a max HP limit for parts.
	- Armor Tool in the VAB/SPH renamed to BDA Craft Utilities Tool.
	- Added experimental 0-100% indication of stacked lift surfaces to the BDA Craft Utilities Tool.
- AI / WM:
	- Fix bug in collision avoidance that sometimes resulted in more collisions between teammates.
	- Add action group to the WM for removing EVA kerbals' helmets (once the vessel becomes the active one).
	- Re-centre between epochs during auto-tuning if the vessel drifts more than 15km from the start position.
- Detectors:
	- Fix anti-aliasing settings affecting craft RCS. Craft will have consistent RCS regardless oF MSAA settings, note that craft may have slightly different RCS across different GPUs/graphics APIs.