@@ -203,6 +203,7 @@ Localization
         #LOC_BDArmory_Settings_ResetHull = Reset Material of parts
         #LOC_BDArmory_Settings_IntakeHack = Hack Intakes
         #LOC_BDArmory_Settings_PWingsHack = Pwing Edge Lift
+        #LOC_BDArmory_Settings_PWingsThickHP = PWing Thickness Based Mass/HP
         #LOC_BDArmory_Settings_KerbalSafety = Kerbal Safety
         #LOC_BDArmory_Settings_KerbalSafetyInventory = Kerbal Inventory
         #LOC_BDArmory_Settings_KerbalSafetyInventory_NoChange = No Change
