@@ -1,9 +1,12 @@
 ﻿IMPROVEMENTS / FIXES
+- General:
+	- Fix Firebottle mass not resetting if a part switched from fueltank to structural
 - UI:
 	- Fix layout of vessel switcher window buttons and version label.
 	- Add debug button when DEBUG_OTHER is enabled for dumping part info.
 	- Add a 'Start competition automatically' button to the Vessel Spawner window for use with 'single spawn'.
 	- Updated German localisation from EzBro.
+	- Fix some Ai GUI infotext.
 - Competition:
 	- Tweaks to sequenced competition start-up to allow a single plane to perform the sequence despite not having enough teams for a competition.
 	- Add an option to save the image from plot_summary.py with a transparent background.
@@ -15,8 +18,11 @@
 	- Add a keybind for arming/disarming the WM.
 - Weapons:
 	- Fix bug in nuke impulse calculation and some NREs.
+	- Fix turrets on non-active vessels following the mouse unless Remote Firing enabled.
+	- fix missiles fired from reloadable rails resetting missile settings on Launch/Spawn.
 - RWP:
 	- Reset the killer GM between competitions and don't enable the killer GM for S5R3 (the altitude limit is still active).
+	- Add option to have Pwing mass and HP scale with thickness.
 
 v1.5.7.0
 IMPROVEMENTS / FIXES
